Add user management and approval workflow features (preview) with JWT authentication